--- a/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
@@ -8,10 +8,6 @@ hero-car-filters {
     height: 100%;
     height: rem-calc(600);
 
-    @include breakpoint(small only) {
-        height: 95vh;
-    }
-
     &::before {
         content: '';
         position: absolute;
