--- a/wp-content/themes/decimaltenths/src/scss/components/_search-by-car-form.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_search-by-car-form.scss
@@ -23,5 +23,11 @@
 
     [type="submit"] {
         @extend %btn;
+        color: var(--brand-neon-green);
+
+        &:hover,
+        &:focus {
+            color: var(--off-black);
+        }
     }
 }
